# ffmpeg_demo

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/zhou/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/common/: commonUtil.h
app/src/main/java/com/zhou/ffmpegdemo/: EncodUtil.java  MainActivity.java
app/src/main/java/com/zhou/ffmpegdemo/ffmpeg/: FFmpegTest1Activity.java
app/src/main/java/com/zhou/ffmpegdemo/opengl/: BaseRender.java  Camera2Preview.java  ChapMain.java  Cube.java  FBOActivity.java  ImageProcess.java  SameTiggle.java  Tiggle.java
app/src/main/java/com/zhou/ffmpegdemo/opengl/android_sdk/: SdkActivity.java
app/src/main/java/com/zhou/ffmpegdemo/opengl/android_sdk/filterfw/: FilterFunctionEnvironment.java  GraphEnvironment.java  MffEnvironment.java
app/src/main/java/com/zhou/ffmpegdemo/opengl/android_sdk/filterfw/core/: AsyncRunner.java  CachedFrameManager.java  FieldPort.java  Filter.java  FilterContext.java  FilterFactory.java  FilterFunction.java  FilterGraph.java  FilterPort.java  FilterSurfaceView.java  FinalPort.java  Frame.java  FrameFormat.java  FrameManager.java  GLEnvironment.java  GLFrame.java  GenerateFieldPort.java  GenerateFinalPort.java  GenerateProgramPort.java  GenerateProgramPorts.java  GraphRunner.java  InputPort.java  KeyValueMap.java  MutableFrameFormat.java  NativeAllocatorTag.java  NativeBuffer.java  NativeFrame.java  NativeProgram.java  OneShotScheduler.java  OutputPort.java  Program.java  ProgramPort.java  ProgramVariable.java  ProtocolException.java  RandomScheduler.java  RoundRobinScheduler.java  Scheduler.java  SerializedFrame.java  ShaderProgram.java  SimpleFrame.java  (+7 more)
app/src/main/java/com/zhou/ffmpegdemo/opengl/android_sdk/filterfw/format/: ImageFormat.java  ObjectFormat.java  PrimitiveFormat.java  package-info.java
app/src/main/java/com/zhou/ffmpegdemo/opengl/android_sdk/filterfw/geometry/: Point.java  Quad.java  Rectangle.java  package-info.java
app/src/main/java/com/zhou/ffmpegdemo/opengl/android_sdk/filterfw/io/: GraphIOException.java  GraphReader.java  PatternScanner.java  TextGraphReader.java  package-info.java
app/src/main/java/com/zhou/ffmpegdemo/opengl/android_sdk/filterpacks/base/: CallbackFilter.java  FrameBranch.java  FrameFetch.java  FrameSource.java  FrameStore.java  GLTextureSource.java  GLTextureTarget.java  InputStreamSource.java  NullFilter.java  ObjectSource.java  OutputStreamTarget.java  RetargetFilter.java
app/src/main/java/com/zhou/ffmpegdemo/opengl/android_sdk/filterpacks/imageproc/: AlphaBlendFilter.java  AutoFixFilter.java  BitmapOverlayFilter.java  BitmapSource.java  BlackWhiteFilter.java  BlendFilter.java  BrightnessFilter.java  ColorTemperatureFilter.java  ContrastFilter.java  CropFilter.java  CropRectFilter.java  CrossProcessFilter.java  DocumentaryFilter.java  DrawOverlayFilter.java  DrawRectFilter.java  DuotoneFilter.java  FillLightFilter.java  FisheyeFilter.java  FixedRotationFilter.java  FlipFilter.java  GrainFilter.java  ImageCombineFilter.java  ImageEncoder.java  ImageSlicer.java  ImageStitcher.java  Invert.java  LomoishFilter.java  NegativeFilter.java  PosterizeFilter.java  RedEyeFilter.java  ResizeFilter.java  RotateFilter.java  SaturateFilter.java  SepiaFilter.java  SharpenFilter.java  SimpleImageFilter.java  StraightenFilter.java  TintFilter.java  ToGrayFilter.java  ToPackedGrayFilter.java  (+4 more)
app/src/main/java/com/zhou/ffmpegdemo/opengl/android_sdk/filterpacks/numeric/: SinWaveFilter.java  package-info.java
app/src/main/java/com/zhou/ffmpegdemo/opengl/filter/: AFilter.java  Gl2Utils.java  MatrixUtils.java
app/src/main/java/com/zhou/ffmpegdemo/view/: DisplayUtil.java  ProgramView.java  RecycleViewActivity.java
app/src/main/jni/: EncodUtil.cpp  FFmpegtTest.cpp  com_zhou_ffmpegdemo_EncodUtil.h  com_zhou_ffmpegdemo_ffmpeg_FFmpegTest1Activity.h
app/src/main/res/layout/: activity_fbo.xml  activity_ffmpegt_test.xml  activity_main.xml  activity_recycle_view.xml  camera_preview.xml  chap_main.xml  cube.xml  image_process.xml  recycle_view_item.xml  same_tiggle.xml  tiggle.xml
app/src/test/java/com/zhou/ffmpegdemo/: ExampleUnitTest.java
(+19 files in other folders)
